--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/map.svg" />
+    <link rel="icon" type="image/svg+xml" href="/geo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TCC react</title> 
+    <title>Geolocation API</title> 
   </head>
   <body>
     <div id="root"></div>
